--- a/src/html/course/course.html
+++ b/src/html/course/course.html
@@ -151,6 +151,36 @@
                          </p>
                      </div>
                  </div>
+                 <div class="right-block">
+                     <h4 class="block-tit">老师其他课程</h4>
+                    <div class="course-block">
+                        <div class="course-h">
+                            <img width="240" height="135" src="../../images/course_2.jpg" alt="">
+                        </div>
+                        <p class="course-nam">《高一化学考点精细梳理.典题验… 副本《高一化学考点精细梳理.典题验… 副本</p>
+                        <div class="course-statistical">
+                            <span class="price"><i>￥</i>1590.00</span> | 0人学习
+                        </div>
+                    </div>
+                     <div class="course-block">
+                         <div class="course-h">
+                             <img width="240" height="135" src="../../images/course_2.jpg" alt="">
+                         </div>
+                         <p class="course-nam">《高一化学考点精细梳理.典题验… 副本《高一化学考点精细梳理.典题验… 副本</p>
+                         <div class="course-statistical">
+                             <span class="price"><i>￥</i>1590.00</span> | 0人学习
+                         </div>
+                     </div>
+                     <div class="course-block">
+                         <div class="course-h">
+                             <img width="240" height="135" src="../../images/course_2.jpg" alt="">
+                         </div>
+                         <p class="course-nam">《高一化学考点精细梳理.典题验… 副本《高一化学考点精细梳理.典题验… 副本</p>
+                         <div class="course-statistical">
+                             <span class="price"><i>￥</i>1590.00</span> | 0人学习
+                         </div>
+                     </div>
+                 </div>
              </div>
          </div>
     </div>
