--- a/src/html/course/course.html
+++ b/src/html/course/course.html
@@ -5,7 +5,7 @@
     <title>Title</title>
     <link rel="stylesheet" href="../../../dist/base.css">
     <link rel="stylesheet" href="../../../dist/course.css">
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_ucu5gph0af00y66r.css">
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_ts6f9z23588pk3xr.css">
 </head>
 <body>
     <div class="course-wrapper">
@@ -52,85 +52,207 @@
                 </div>
             </div>
         </div>
-         <div class="course-cont">
+         <div class="course-cont clearfix">
              <div class="course-detail">
                  <ul class="nav-tab clearfix">
                     <li class="active">课程详情</li>
                     <li class="">课程详情</li>
                  </ul>
+                 <!--<div class="nav-tab-view course-info">-->
+                     <!--<div class="tab-block">-->
+                         <!--<div class="tab-info">-->
+                             <!--<h3 class="tab-tit">基本信息</h3>-->
+                         <!--</div>-->
+                         <!--<ul class="timetable">-->
+                             <!--<li>-->
+                                 <!--<p class="timetable-t">上课时间：</p>-->
+                                 <!--<div class="timetable-i">2017.04.29-2017.09.09</div>-->
+                             <!--</li>-->
+                             <!--<li>-->
+                                 <!--<p class="timetable-t">上课地点：</p>-->
+                                 <!--<div class="timetable-i">重大C区第五教学楼</div>-->
+                             <!--</li>-->
+                             <!--<li>-->
+                                 <!--<p class="timetable-t">上课时长：</p>-->
+                                 <!--<div class="timetable-i">45分钟</div>-->
+                             <!--</li>-->
+                             <!--<li>-->
+                                 <!--<p class="timetable-t">学习时间：</p>-->
+                                 <!--<div class="timetable-i">下午14:00</div>-->
+                             <!--</li>-->
+                         <!--</ul>-->
+                     <!--</div>-->
+                     <!--<div class="tab-block">-->
+                         <!--<div class="tab-info">-->
+                             <!--<h3 class="tab-tit">基本信息</h3>-->
+                         <!--</div>-->
+                         <!--<div class="figuration">-->
+                             <!--<div class="figure">-->
+                                 <!--<img width="880" height="270" src="../../images/course_2.jpg" alt="">-->
+                             <!--</div>-->
+                             <!--<p class="text">-->
+                                 <!--本课程为高三章年级章节薄弱的男女生以及高一年级同步学习或期末复习课程，本系列课共12课时，6课时复习课，6课时预习课。<br>-->
+                                 <!--暑假提前学，逆袭新学期。<br>-->
+                                 <!--高中化学电解池原理电极方程式的书写技巧<br>-->
+                                 <!--高中化学电解池是高中电化学内容的一部分，是高中化学的重点内容，高考考察频率很高，通常和电化学一起出题。由于原电池<br>-->
+                                 <!--和电解池很相近，导致很多同学去分不清，电极方程式书写困难。本次课将从电解池的基本原理、构成、电解池的应用等方面为<br>-->
+                                 <!--大家全面的讲解电解池的相关知识，帮助各位同学掌握分析电解池的方法。<br>-->
+                                 <!--离子共存是高考常考的题型之一，通常以选择题形式出现。离子共存问题在高中阶段从高一就开始出现考察，所学习的内容量和难<br>-->
+                                 <!--度逐级递增，最后在高考中完整的考察高中三年相关知识点。通过一次课的时间，做一个全面的总结，将常见的离子共存问题展现<br>-->
+                                 <!--在大家面前，梳理近几年的考题变化趋势，配合相应的例题，总结解题套路和方法，一次解决离子共存的问题。-->
+                             <!--</p>-->
+                         <!--</div>-->
+                     <!--</div>-->
+                     <!--<div class="tab-block">-->
+                         <!--<div class="tab-info">-->
+                             <!--<h3 class="tab-tit">基本信息</h3>-->
+                         <!--</div>-->
+                         <!--<div class="figuration">-->
+                             <!--<p>-->
+                                 <!--全国各省市高中生，课后群内辅导答疑-->
+                             <!--</p>-->
+                         <!--</div>-->
+                     <!--</div>-->
+                     <!--<div class="tab-block">-->
+                         <!--<div class="tab-info">-->
+                             <!--<h3 class="tab-tit">基本信息</h3>-->
+                         <!--</div>-->
+                         <!--<div class="figuration">-->
+                             <!--<p>-->
+                                 <!--全面复习高考知识点，让学生熟悉高考的出题角度和常考题型，帮助学生夯实基础，提高解题技能。 副本-->
+                             <!--</p>-->
+                         <!--</div>-->
+                     <!--</div>-->
+                     <!--<div class="tab-block">-->
+                         <!--<div class="tab-info">-->
+                             <!--<h3 class="tab-tit">基本信息</h3>-->
+                         <!--</div>-->
+                         <!--<div class="figuration">-->
+                             <!--<p>-->
+                                 <!--精细的知识点复习，帮助学生查缺补漏，全面的最新真题解析，让学生近距离感受高考，总结各种解题方法，让备考学习事半功倍！-->
+                             <!--</p>-->
+                         <!--</div>-->
+                     <!--</div>-->
+                 <!--</div>-->
                  <div class="nav-tab-view course-info">
                      <div class="tab-block">
                          <div class="tab-info">
                              <h3 class="tab-tit">基本信息</h3>
                          </div>
-                         <ul class="timetable">
-                             <li>
-                                 <p class="timetable-t">上课时间：</p>
-                                 <div class="timetable-i">2017.04.29-2017.09.09</div>
+                         <div  class="course-star-end">
+                             <p class="used">总计<span>12</span>课时,已上0节</p>
+                             <img src="../../images/p5.png" alt="">
+                             <ul class="cost">
+                                 <li class="left">
+                                     <p>开课时间</p>
+                                     <span>2017-04-29</span>
+                                 </li>
+                                 <li class="right">
+                                     <p>开课时间</p>
+                                     <span>2017-04-29</span>
+                                 </li>
+                             </ul>
+                         </div>
+                         <div class="course-chapter">
+                             <ul>
+                                 <li class="">
+                                     <div class="chapter-tag">
+                                         <span>单元1</span>
+                                         <div class="chapter-icon">
+                                             <i class="iconfont icon-book"></i>
+                                         </div>
+                                     </div>
+                                     <p class="text">化学实验仪器与基本操作</p>
+                                 </li>
+                                 <li class="">
+                                     <div class="chapter-tag">
+                                         <span>单元1</span>
+                                         <div class="chapter-icon">
+                                             <i class="iconfont icon-book"></i>
+                                         </div>
+                                     </div>
+                                     <p class="text">化学实验仪器与基本操作</p>
+                                 </li>
+                                 <li class="">
+                                     <div class="chapter-tag">
+                                         <span>单元1</span>
+                                         <div class="chapter-icon">
+                                             <i class="iconfont icon-book"></i>
+                                         </div>
+                                     </div>
+                                     <p class="text">化学实验仪器与基本操作</p>
+                                 </li>
+                                 <li class="">
+                                     <div class="chapter-tag">
+                                         <span>单元1</span>
+                                         <div class="chapter-icon">
+                                             <i class="iconfont icon-book"></i>
+                                         </div>
+                                     </div>
+                                     <p class="text">化学实验仪器与基本操作</p>
+                                 </li><li class="">
+                                 <div class="chapter-tag">
+                                     <span>单元1</span>
+                                     <div class="chapter-icon">
+                                         <i class="iconfont icon-book"></i>
+                                     </div>
+                                 </div>
+                                 <p class="text">化学实验仪器与基本操作</p>
                              </li>
-                             <li>
-                                 <p class="timetable-t">上课地点：</p>
-                                 <div class="timetable-i">重大C区第五教学楼</div>
+                                 <li class="">
+                                     <div class="chapter-tag">
+                                         <span>单元1</span>
+                                         <div class="chapter-icon">
+                                             <i class="iconfont icon-book"></i>
+                                         </div>
+                                     </div>
+                                     <p class="text">化学实验仪器与基本操作</p>
+                                 </li>
+                                 <li class="">
+                                     <div class="chapter-tag">
+                                         <span>单元1</span>
+                                         <div class="chapter-icon">
+                                             <i class="iconfont icon-book"></i>
+                                         </div>
+                                     </div>
+                                     <p class="text">化学实验仪器与基本操作</p>
+                                 </li><li class="">
+                                 <div class="chapter-tag">
+                                     <span>单元1</span>
+                                     <div class="chapter-icon">
+                                         <i class="iconfont icon-book"></i>
+                                     </div>
+                                 </div>
+                                 <p class="text">化学实验仪器与基本操作</p>
+                             </li><li class="">
+                                 <div class="chapter-tag">
+                                     <span>单元1</span>
+                                     <div class="chapter-icon">
+                                         <i class="iconfont icon-book"></i>
+                                     </div>
+                                 </div>
+                                 <p class="text">化学实验仪器与基本操作</p>
                              </li>
-                             <li>
-                                 <p class="timetable-t">上课时长：</p>
-                                 <div class="timetable-i">45分钟</div>
-                             </li>
-                             <li>
-                                 <p class="timetable-t">学习时间：</p>
-                                 <div class="timetable-i">下午14:00</div>
-                             </li>
-                         </ul>
-                     </div>
-                     <div class="tab-block">
-                         <div class="tab-info">
-                             <h3 class="tab-tit">基本信息</h3>
-                         </div>
-                         <div class="figuration">
-                             <div class="figure">
-                                 <img width="880" height="270" src="../../images/course_2.jpg" alt="">
-                             </div>
-                             <p class="text">
-                                 本课程为高三章年级章节薄弱的男女生以及高一年级同步学习或期末复习课程，本系列课共12课时，6课时复习课，6课时预习课。<br>
-                                 暑假提前学，逆袭新学期。<br>
-                                 高中化学电解池原理电极方程式的书写技巧<br>
-                                 高中化学电解池是高中电化学内容的一部分，是高中化学的重点内容，高考考察频率很高，通常和电化学一起出题。由于原电池<br>
-                                 和电解池很相近，导致很多同学去分不清，电极方程式书写困难。本次课将从电解池的基本原理、构成、电解池的应用等方面为<br>
-                                 大家全面的讲解电解池的相关知识，帮助各位同学掌握分析电解池的方法。<br>
-                                 离子共存是高考常考的题型之一，通常以选择题形式出现。离子共存问题在高中阶段从高一就开始出现考察，所学习的内容量和难<br>
-                                 度逐级递增，最后在高考中完整的考察高中三年相关知识点。通过一次课的时间，做一个全面的总结，将常见的离子共存问题展现<br>
-                                 在大家面前，梳理近几年的考题变化趋势，配合相应的例题，总结解题套路和方法，一次解决离子共存的问题。
-                             </p>
-                         </div>
-                     </div>
-                     <div class="tab-block">
-                         <div class="tab-info">
-                             <h3 class="tab-tit">基本信息</h3>
-                         </div>
-                         <div class="figuration">
-                             <p>
-                                 全国各省市高中生，课后群内辅导答疑
-                             </p>
-                         </div>
-                     </div>
-                     <div class="tab-block">
-                         <div class="tab-info">
-                             <h3 class="tab-tit">基本信息</h3>
-                         </div>
-                         <div class="figuration">
-                             <p>
-                                 全面复习高考知识点，让学生熟悉高考的出题角度和常考题型，帮助学生夯实基础，提高解题技能。 副本
-                             </p>
-                         </div>
-                     </div>
-                     <div class="tab-block">
-                         <div class="tab-info">
-                             <h3 class="tab-tit">基本信息</h3>
-                         </div>
-                         <div class="figuration">
-                             <p>
-                                 精细的知识点复习，帮助学生查缺补漏，全面的最新真题解析，让学生近距离感受高考，总结各种解题方法，让备考学习事半功倍！
-                             </p>
+                                 <li class="">
+                                     <div class="chapter-tag">
+                                         <span>单元1</span>
+                                         <div class="chapter-icon">
+                                             <i class="iconfont icon-book"></i>
+                                         </div>
+                                     </div>
+                                     <p class="text">化学实验仪器与基本操作</p>
+                                 </li>
+                                 <li class="">
+                                     <div class="chapter-tag">
+                                         <span>单元1</span>
+                                         <div class="chapter-icon">
+                                             <i class="iconfont icon-book"></i>
+                                         </div>
+                                     </div>
+                                     <p class="text">化学实验仪器与基本操作</p>
+                                 </li>
+
+                             </ul>
                          </div>
                      </div>
                  </div>
