--- a/src/html/course/course.html
+++ b/src/html/course/course.html
@@ -142,7 +142,7 @@
                          <div  class="course-star-end">
                              <p class="used">总计<span>12</span>课时,已上0节</p>
                              <img src="../../images/p5.png" alt="">
-                             <ul class="cost">
+                             <ul class="cost clearfix">
                                  <li class="left">
                                      <p>开课时间</p>
                                      <span>2017-04-29</span>
