--- a/src/html/school/school-index.html
+++ b/src/html/school/school-index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <!--tyle="background-image: url(../../images/p7.png)"-->
-    <div class="school-wrapper">
+    <div class="school-wrapper" style="background-image: url(../../images/p7.png)">
         <div class="school-cont">
             <div class="head-m">
                 <div class="head-logo"><img width="152" height="152" src="../../images/p8.jpg" alt=""></div>
