--- a/src/html/student/center-index.html
+++ b/src/html/student/center-index.html
@@ -60,7 +60,7 @@
                 <div class="menu-foot">
                     <p>环球优才微信公众号</p>
                     <div class="menu-qr-code">
-                        <img width="110" height="110" src="../../images/p6.jpg" alt="">
+                        <img width="115" height="116" src="../../images/p_11.jpg" alt="">
                     </div>
                     <span>关注我们</span>
                 </div>
