--- a/src/html/student/center-index.html
+++ b/src/html/student/center-index.html
@@ -60,15 +60,30 @@
                 <div class="menu-foot">
                     <p>环球优才微信公众号</p>
                     <div class="menu-qr-code">
-                        <img width="115" height="116" src="../../images/p_11.jpg" alt="">
+                        <img width="" height="116" src="../../images/p_11.jpg" alt="">
                     </div>
                     <span>关注我们</span>
                 </div>
             </div>
              <div class="cont-m">
-                 <h3 class="cont-title">荣誉认证</h3>
+                 <div class="cont-title-box">
+                     <h3 class="cont-title">个人设置</h3>
+                 </div>
                  <div class="user-info">
-                    <div class="i"></div>
+                     <div class="user-form">
+                         <div class="item-form">
+                             <div class="item-form-tit">昵称</div>
+                             <div class="form-group">
+                                 <select class="form-control" id="exampleSelect1">
+                                     <option>1</option>
+                                     <option>2</option>
+                                     <option>3</option>
+                                     <option>4</option>
+                                     <option>5</option>
+                                 </select>
+                             </div>
+                         </div>
+                     </div>
                  </div>
              </div>
          </div>
