--- a/src/html/teacher/history.html
+++ b/src/html/teacher/history.html
@@ -9,7 +9,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 </head>
 <body>
-    <div class="teacher-wrapper" style="background-image: url(../../images/p6.jpg)">
+    <div class="teacher-wrapper" style="background-image: url(../../images/teacher_bg.png)">
         <div class="wrapper">
             <div class="head-info">
                 <div class="photo">
