--- a/src/html/student/center-history.html
+++ b/src/html/student/center-history.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" href="../../../dist/base.css">
     <link rel="stylesheet" href="../../../dist/student.css">
     <link rel="stylesheet" href="//at.alicdn.com/t/font_kdph25ye5du6jemi.css">
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <link href="//cdn.bootcss.com/bootstrap-select/2.0.0-beta1/css/bootstrap-select.css" rel="stylesheet">
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
+    <script src="//cdn.bootcss.com/bootstrap-select/2.0.0-beta1/js/bootstrap-select.min.js"></script>
 </head>
 <body>
 <div class="student-center-wrapper">
