--- a/src/html/school/center/board.html
+++ b/src/html/school/center/board.html
@@ -33,8 +33,7 @@
         <div class="cont-m">
             <div class="school-board">
                 <div class="common-h clearfix">
-                    <h4 class="fl">招生简章</h4>
-                    <a class="fr" href="javascript:alert(1)"><i>+</i>添加</a>
+                    <h4 class="fl">资料设置</h4>
                 </div>
                 <div class="upload-img">
                     <div class="img"></div>
