--- a/src/html/school/center/board.html
+++ b/src/html/school/center/board.html
@@ -71,7 +71,7 @@
                             <span class="name">学校介绍 </span>
                             <textarea class="textarea" name="" id="" cols="30" rows="10" placeholder="添加学校简介"></textarea>
                         </div>
-                        <div class="form-item">
+                        <div class="form-item noborder">
                             <span class="name"></span>
                             <button class="btn save">保 存</button>
                             <button  class="btn reset" type="reset">重置</button>
