--- a/src/html/school/center/board.html
+++ b/src/html/school/center/board.html
@@ -36,7 +36,10 @@
                     <h4 class="fl">资料设置</h4>
                 </div>
                 <div class="upload-img">
-                    <div class="img"></div>
+                    <div class="img">
+                        <input class="file" type="file" accept="image/*,image/jpeg;capture=camera">
+                        <img src="../../../images/p8.jpg" alt="">
+                    </div>
                     <div class="desc">上传校徽</div>
                 </div>
                 <div class="board-from">
@@ -61,6 +64,7 @@
                             <span class="name">简介图片  </span>
                             <div class="form-upload-img">
                                 <div class="upload-btn">
+                                    <input class="file" type="file" accept="image/*,image/jpeg;capture=camera">
                                     <i class="iconfont icon-jia"></i>
                                     <div class="text">上传图片</div>
                                 </div>
