--- a/src/html/student/center-history.html
+++ b/src/html/student/center-history.html
@@ -5,7 +5,7 @@
     <title>Title</title>
     <link rel="stylesheet" href="../../../dist/base.css">
     <link rel="stylesheet" href="../../../dist/student.css">
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_kdph25ye5du6jemi.css">
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_hzqjq8eyvnp14i.css">
     <link href="//cdn.bootcss.com/bootstrap-select/2.0.0-beta1/css/bootstrap-select.css" rel="stylesheet">
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
     <script src="//cdn.bootcss.com/bootstrap-select/2.0.0-beta1/js/bootstrap-select.min.js"></script>
@@ -97,6 +97,42 @@
                         <i>+</i>
                         添加
                     </a>
+                </div>
+                <div class="upload-form">
+                    <form>
+                        <div class="form-item">
+                            <span class="name">荣誉名称：</span>
+                            <input class="txt" type="text">
+                        </div>
+                        <div class="form-item">
+                            <span class="name">获得名次：</span>
+                            <select class="selected">
+                                <option value="selected">sss</option>
+                                <option value="selected">sss</option>
+                                <option value="selected">sss</option>
+                            </select>
+                        </div>
+                        <div class="form-item">
+                            <span class="name">获奖时间：</span>
+                            <input class="time" type="time">
+                        </div>
+                        <div class="form-item">
+                            <span class="name"></span>
+                            <div>
+                                <p class="text">请上传荣誉图片，文件大小不能超过1M，格式为png、jpeg、jpg、gif、bmp</p>
+                                <div class="upload iconfont icon-jia">
+                                    <input class="file" type="file" accept="image/*,image/jpeg;capture=camera">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-item">
+                            <span class="name"></span>
+                            <div>
+                                <button class="btn save">保存</button>
+                                <button class="btn cancel">取消</button>
+                            </div>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
