--- a/src/html/student/center-index.html
+++ b/src/html/student/center-index.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" href="../../../dist/base.css">
     <link rel="stylesheet" href="../../../dist/student.css">
     <link rel="stylesheet" href="//at.alicdn.com/t/font_2g1un31zh62vgqfr.css">
+    <link href="//cdn.bootcss.com/select2/4.0.3/css/select2.min.css" rel="stylesheet">
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="//cdn.bootcss.com/select2/4.0.3/js/select2.min.js"></script>
 </head>
 <body>
      <div class="student-center-wrapper">
@@ -74,12 +76,9 @@
                          <div class="item-form">
                              <div class="item-form-tit">昵称</div>
                              <div class="form-group">
-                                 <select class="form-control" id="exampleSelect1">
-                                     <option>1</option>
-                                     <option>2</option>
-                                     <option>3</option>
-                                     <option>4</option>
-                                     <option>5</option>
+                                 <select class="js-example-basic-single">
+                                     <option value="AL">Alabama</option>
+                                     <option value="WY">Wyoming</option>
                                  </select>
                              </div>
                          </div>
@@ -88,5 +87,10 @@
              </div>
          </div>
      </div>
+     <script type="text/javascript">
+		 $(document).ready(function() {
+			 $(".js-example-basic-single").select2();
+		 });
+     </script>
 </body>
 </html>
