--- a/src/html/student/center-index.html
+++ b/src/html/student/center-index.html
@@ -81,14 +81,16 @@
                              </div>
                              <div class="form-item">
                                  <span class="name">昵称</span>
-                                 <lable>
-                                     <input type="radio">
-                                     <span>男</span>
-                                 </lable>
-                                 <lable>
-                                     <input type="radio">
-                                     <span>女</span>
-                                 </lable>
+                                 <label class="__check">
+                                     <input type="radio" name="check" checked value="on">
+                                     <i class="__deck"></i>
+                                     <span class="__check_text">男</span>
+                                 </label>
+                                 <label class="__check">
+                                     <input type="radio" name="check" value="on">
+                                     <i class="__deck"></i>
+                                     <span class="__check_text">女</span>
+                                 </label>
                              </div>
                              <div class="form-item">
                                  <span class="name"> 生日 </span>
